buttons alignment crappy fix

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -288,7 +288,16 @@ fieldset[disabled] .btn-primary.active {
     color: #ffffff;
     background-color: #ea5f69;
     border-radius: 25px;
+    margin-top: 20px;
 }
+
+@media(min-width:767px) {
+    .btn-xl {
+        margin-top: 150px;
+    }
+}
+
+
 
 .clear {
     padding: 15px 38px; 
@@ -304,7 +313,15 @@ fieldset[disabled] .btn-primary.active {
     color: #ea5f69;
     font-weight: bold;
     border-radius: 25px;
+    margin-top: 20px;
 }
+
+@media(min-width:992px) {
+    .clear {
+        margin-top: 150px;
+    }
+}
+
 
 .clear:hover {
     border: 4px solid #dbe5d8; 
@@ -318,6 +335,7 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl:hover,
 .btn-xl:active,
 .btn-xl.active,
+.btn-xl:focus,
 .open .dropdown-toggle.btn-xl {
     border: 4px solid #e53946; 
     color: #ffffff;
